# humidity

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  ds3231.c  humidity.c  i2cdev.c  main.c  nvs_fields.c  sd_espi.c  ssd1306_oled.c  sync.c  wifi_sta.c
main/include/: common.h  ds3231.h  flags.h  humidity.h  i2cdev.h  nvs_fields.h  sd_espi.h  ssd1306_oled.h  sync.h  wifi_sta.h
main/include/menu/: menu_date_time.h  menu_main.h  menu_period.h  menu_reset.h  menu_rotary.h  menu_start.h  menu_sync.h  menu_titles.h
main/include/ux/: gpio_button.h  rotary_encoder.h
main/menu/: menu_date_time.c  menu_main.c  menu_period.c  menu_reset.c  menu_rotary.c  menu_start.c  menu_sync.c  menu_titles.c
main/ux/: gpio_button.c  rotary_encoder.c
