idf_component_register(SRCS 
    "main.c" 
    "humidity.c"
    "ssd1306_oled.c" 
    "sd_espi.c" 
    "i2cdev.c"
    "ds3231.c"
    "nvs_fields.c"
    "wifi_sta.c"
    "./ux/gpio_button.c" 
    "./ux/rotary_encoder.c" 
    "./menu/menu_rotary.c" 
    "./menu/menu_date_time.c"
    "./menu/menu_main.c"
    "./menu/menu_period.c"
    "./menu/menu_start.c"
    "./menu/menu_titles.c"
    "./menu/menu_reset.c"
    "./menu/menu_sync.c"
        INCLUDE_DIRS "./include/")
